# STLKernel

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: kernel_ridge_regression.ipynb
src/: formulae.py  kernel.py
src/stlkernel/: distribution_formulae.py  distribution_trajectories.py  kernel.py  kfold_cv.py  krr.py  trajectories.py
