[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "STLKernel"
version = "0.1.0"
description = "Kernel methods for Signal Temporal Logic"
dependencies = [
    "torch",
    "tqdm",
    # TorCheck is added via requirements
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]